add endpoint for building gh org auth redirect
